--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
-    "irc": "^0.5.0",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "mysql": "^2.10.2",
     "sequelize": "^3.21.0",
-    "serve-favicon": "~2.3.0"
+    "sequelize-cli": "^2.4.0",
+    "serve-favicon": "~2.3.0",
+    "twitch-irc": "^1.2.7",
+    "twitter": "^1.2.5"
   }
 }
